--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
-<!-- -->
-<div id="myDiv" class="header">
+<!DOCTYPE html> 
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div id="myDIV" class="header">
     <h2>TODO List Header</h2>
     <input type="text" id="myInput" placeholder="Title...">
     <span onclick="newElement()" class="addBtn">ADD</span>
-</div>"
+</div>
 
-<ul id="myUl"> 
+<ul id="myUL"> 
     <li>Hit the gym</li>
     <li class="checked">put car in for service</li>
 </ul>
+
+<script src="script.js"></script>
+</body>
+</html>
